Bug fixes to column layout and header wrap-around

--- a/PForms.css
+++ b/PForms.css
@@ -35,12 +35,14 @@ div.PFormField {
 	padding: 8px;
 }
 
-div.PFormField label {
+div.PFormField div.heading {
 	font-family: inherit;
 	display: block;
 	font-size: 16pt;
 	font-weight: bold;
 	margin-bottom: 8px;
+	border: none !important;
+	padding: 1px !important;
 }
 
 div.PFormField div,
@@ -77,6 +79,7 @@ div.PFormLineItemsContainerElement {
 	margin: none;
 	padding: none;
 	border: none;
+	align-items: center;
 }
 
 div.PFormLineItemsContainerElement input[type='checkbox'] {
@@ -113,4 +116,5 @@ div.PFormLineItem div.heading {
 	width: 100%;
 	box-sizing: content-box;
 	padding: 8px 0px;
+	height: auto !important;
 }
